--- a/src/components/Slideshow/slideshow.css
+++ b/src/components/Slideshow/slideshow.css
@@ -2,37 +2,36 @@
   position: relative;
   margin: auto;
 
-  img:first-child {
+  .slideshow-image {
     width: 100%;
     object-fit: cover;
     height: 255px;
     border-radius: 15px;
   }
-}
 
-.arrow-left {
-  width: 20px;
-  position: absolute;
-  top: 50%;
-  left: 15px;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-
-.arrow-right {
-  width: 20px;
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  transform: translateY(-50%);
-  cursor: pointer;
+  .arrow-left {
+    width: 20px;
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
+  .arrow-right {
+    width: 20px;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 768px) {
   .slideshow {
-    img:first-child {
+    .slideshow-image {
       height: 410px;
     }
   }
-  
 }
